# PwnageBox

./: .env.example  .gitignore  Dockerfile  README.md  VPS_DEPLOYMENT.md  codex-agent-c7.py  codex.yaml  docker-compose.yml  pwnagebox-spec.md  pyproject.toml  requirements.txt  start.sh
ai_modules/: example.py
app/: database.py  main.py
app/ai_modules/: __init__.py  example.py
app/api/v1/endpoints/: health.py  pwner.py  report.py  researcher.py  scammer.py  social.py
app/core/: config.py
app/db/: session.py
app/routers/: ai.py
app/utils/: logger.py
pwnagebox/: Dockerfile  README.md  __init__.py  app.py  database.py  pyproject.toml
pwnagebox/modules/: pwner.py  researcher.py  scammer.py  voicepwner.py
pwnagebox/tests/: test_app.py
pwnbox/: Dockerfile  auto_pwn.py
splunk/: dashboard.xml
tests/: test_health.py
traffic-gen/: Dockerfile  simulate.py
victim/: Dockerfile
web-ui/: Dockerfile  app.py
web-ui/templates/: index.html
