[project]
name = "pwnagebox"
version = "1.0.0"
description = "Autonomous AI Cybersecurity Platform"
authors = ["Presient Labs <contact@presientlabs.ai>"]
dependencies = [
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
